[gd_scene load_steps=9 format=3 uid="uid://bercl4qjns4w5"]

[ext_resource type="Script" path="res://main.gd" id="1_8rt3s"]
[ext_resource type="Texture2D" uid="uid://rsb1ak47d31l" path="res://assets/background.png" id="2_26k67"]
[ext_resource type="Script" path="res://game_state.gd" id="2_dfo85"]
[ext_resource type="PackedScene" uid="uid://xrdxackwanbj" path="res://scenes/shop.tscn" id="3_d8shh"]
[ext_resource type="PackedScene" uid="uid://cw6r3ofpwqok0" path="res://scenes/clicker.tscn" id="5_o512s"]
[ext_resource type="PackedScene" uid="uid://dthfilvysua6f" path="res://scenes/user_interface.tscn" id="5_sxgyx"]
[ext_resource type="PackedScene" uid="uid://besjyut7qv84s" path="res://scenes/loot_item.tscn" id="6_6cput"]
[ext_resource type="Script" path="res://loot_spawner.gd" id="7_3f64n"]

[node name="Main" type="Node"]
script = ExtResource("1_8rt3s")

[node name="BackgroundRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_26k67")

[node name="Shop" parent="." instance=ExtResource("3_d8shh")]
unique_name_in_owner = true
anchors_preset = 11
anchor_left = 1.0
offset_left = -384.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0

[node name="UserInterface" parent="." node_paths=PackedStringArray("game_state") instance=ExtResource("5_sxgyx")]
unique_name_in_owner = true
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = -272.0
offset_right = -408.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
acceleration = 1
game_state = NodePath("../GameState")

[node name="Clicker" parent="." instance=ExtResource("5_o512s")]
position = Vector2(768, 404)

[node name="LootSpawnArea" type="Node" parent="."]

[node name="LootSpawnAreaTL" type="Marker2D" parent="LootSpawnArea"]
position = Vector2(24, 24)

[node name="LootSpawnAreaBR" type="Marker2D" parent="LootSpawnArea"]
position = Vector2(1512, 784)

[node name="LootSpawner" type="Node" parent="." node_paths=PackedStringArray("spawn_area_top_left", "spawn_area_bottom_right", "loot_end_position")]
script = ExtResource("7_3f64n")
LootItemScn = ExtResource("6_6cput")
spawn_area_top_left = NodePath("../LootSpawnArea/LootSpawnAreaTL")
spawn_area_bottom_right = NodePath("../LootSpawnArea/LootSpawnAreaBR")
loot_end_position = NodePath("../Clicker")

[node name="SpawnTimer" type="Timer" parent="LootSpawner"]
wait_time = 2.0
one_shot = true

[node name="GameState" type="Node" parent="."]
script = ExtResource("2_dfo85")

[node name="AutoclickTimer" type="Timer" parent="GameState"]
unique_name_in_owner = true

[node name="APMTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[connection signal="item_purchased" from="Shop" to="." method="_on_shop_item_purchased"]
[connection signal="area_collided" from="Clicker" to="." method="_on_clicker_area_collided"]
[connection signal="clicked" from="Clicker" to="." method="_on_clicker_clicked"]
[connection signal="scale_changed" from="Clicker" to="." method="_on_clicker_scale_changed"]
[connection signal="item_looted" from="LootSpawner" to="." method="_on_loot_spawner_item_looted"]
[connection signal="timeout" from="LootSpawner/SpawnTimer" to="LootSpawner" method="_on_spawn_timer_timeout"]
[connection signal="permanent_item_changed" from="GameState" to="." method="_on_game_state_permanent_item_changed"]
[connection signal="score_changed" from="GameState" to="." method="_on_game_state_score_changed"]
[connection signal="timeout" from="GameState/AutoclickTimer" to="GameState" method="click"]
[connection signal="timeout" from="APMTimer" to="." method="_on_apm_timer_timeout"]
